@@ -519,7 +519,6 @@ memcached_behavior_set(Memcached__libmemcached ptr, memcached_behavior flag, uin
 
 memcached_return
 memcached_callback_set(Memcached__libmemcached ptr, memcached_callback flag, SV *data)
-    PREINIT:
     CODE:
     /* we only allow setting of known-safe flags */
     switch (flag) {
@@ -528,6 +527,25 @@ memcached_callback_set(Memcached__libmemcached ptr, memcached_callback flag, SV 
         break;
     default:
         RETVAL = MEMCACHED_FAILURE;
+        break;
+    }
+    OUTPUT:
+        RETVAL
+
+SV *
+memcached_callback_get(Memcached__libmemcached ptr, memcached_callback flag, IN_OUT memcached_return ret=NO_INIT)
+    PREINIT:
+        void *data = NULL;
+    CODE:
+    RETVAL = &PL_sv_undef;
+    /* we only allow setting of known-safe flags */
+    switch (flag) {
+    case MEMCACHED_CALLBACK_PREFIX_KEY:
+        data = memcached_callback_get(ptr, flag, &ret);
+        RETVAL = newSVpv(data, 0);
+        break;
+    default:
+        ret = MEMCACHED_FAILURE;
         break;
     }
     OUTPUT:
