@@ -5,6 +5,8 @@ Memcached::libmemcached::Changes - List of significant changes
 =head2 Changes in 0.4404 28th Oct 2010
 
   Added memcached_callback_set() to enable MEMCACHED_CALLBACK_PREFIX_KEY.
+  Added memcached_callback_get()
+  Made test timing more robust.
 
 =head2 Changes in 0.4403 28th Oct 2010
 
